--- a/Xialla-5 31/assets/xialla-5.webflow.css.liquid
+++ b/Xialla-5 31/assets/xialla-5.webflow.css.liquid
@@ -7891,6 +7891,10 @@ figcaption {
   margin-bottom: 10px;
 }
 
+.html-embed.live {
+  display: none;
+}
+
 .cta7-map {
   height: 100%;
   line-height: 20px;
