--- a/Xialla-5 31/templates/page.contact.liquid
+++ b/Xialla-5 31/templates/page.contact.liquid
@@ -148,7 +148,7 @@
                 <div>{{ 'contact.DIV_44' | t }}</div>
               </div>
             </div>
-            <div class="html-embed w-embed w-script">
+            <div class="html-embed live w-embed w-script">
               <!-- [if lte IE 8]>
 <script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/v2-legacy.js"></script>
 <![endif] -->
@@ -157,6 +157,18 @@
   hbspt.forms.create({
 	portalId: "5835628",
 	formId: "94a38824-dacc-40d9-b949-c6ecca079c15"
+});
+</script>
+            </div>
+            <div class="html-embed test w-embed w-script">
+              <!-- [if lte IE 8]>
+<script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/v2-legacy.js"></script>
+<![endif] -->
+              <script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/v2.js"></script>
+              <script>
+  hbspt.forms.create({
+	portalId: "5835628",
+	formId: "1e8eded9-4345-4270-b79b-a848531cc085"
 });
 </script>
             </div>
